<resources>
    <string name="app_name">January21FinalProject</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_member_sign_up">New member ? Sign up</string>
    <string name="new_member">New member ?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="get_started">Get Started</string>
    <string name="create_an_account">Create an account</string>
    <string name="send_email">Send Email</string>
    <string name="forgetten">Forgetten</string>
    <string name="your_password">your password ?</string>
    <string name="enter_ur_email">Enter your email address and we would send you a link to reset your password</string>
    w
    <string name="already_a_member">Already a member ?</string>
    <string name="check_your_e_mail">Check your e-mail</string>
    <string name="we_have_send_email">We have send your a reset password link on your registered e-mail address.</string>
</resources>