<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ic_back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_35sp" />

    <TextView
        android:id="@+id/tv_sign_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sp" />

    <EditText
        android:id="@+id/et_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="@dimen/_20sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="165dp" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/_20sp"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_password"
        android:textColor="#FA5353"
        android:textSize="@dimen/_16sp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64dp"
        android:layout_marginTop="@dimen/_35sp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="@dimen/_20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_new_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/new_member"
            android:textColor="#A8A8A8"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/tv_sign_up_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textColor="#454545"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>


</LinearLayout>