<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ic_back_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/tv_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/get_started"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_35sp" />

    <TextView
        android:id="@+id/tv_create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sp" />

    <EditText
        android:id="@+id/et_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="@dimen/_20sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="165dp" />

    <EditText
        android:id="@+id/et_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_20sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="165dp" />

    <EditText
        android:id="@+id/et_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/_20sp"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="254dp" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64dp"
        android:layout_marginTop="@dimen/_35sp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="@dimen/_20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_new_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/new_member"
            android:textColor="#A8A8A8"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/tv_sign_up_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textColor="#454545"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>


</LinearLayout>