<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ic_back_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/tv_forgetten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgetten"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_35sp" />

    <TextView
        android:id="@+id/tv_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/your_password"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_35sp" />

    <TextView
        android:id="@+id/tv_sign_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/enter_ur_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/et_email_forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_20sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="165dp" />

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64dp"
        android:layout_marginTop="@dimen/_80dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textSize="@dimen/_20sp" />

</LinearLayout>